# genspio

./: .gitignore  .merlin  .travis.yml  Makefile  README.md  dune-project  exp2.ml  genspio.ml  genspio.opam  myocamlbuild.ml  opam  please.ml  please.mlt
.github/workflows/: main.yml
doc/: exec-return-issue.md  extra-testing.md
opam/: descr  opam
src/examples/: downloader.ml  dune  main.ml  multigit.ml  service_composer.ml  small.ml  vm_tester.ml
src/lib/: EDSL.ml  EDSL.mli  EDSL_ng.ml  EDSL_ng.mli  EDSL_v0.ml  EDSL_v0.mli  common.ml  compile.ml  compile.mli  dune  language.ml  standard_compiler.ml  to_slow_flow.ml  to_slow_stack.ml  transform.ml  transform.mli
src/test/: dune  examples.ml  main.ml
src/test-lib/: dune  test_lib.ml
tools/: build-doc.sh  ci_test.sh  env-var-tst.sh  multigit-test.sh  please_lib.ml  travis_ci_test.sh
