(executable
 (name downloader)
 (libraries genspio base fmt)
 (modules downloader))

(executable
 (name vm_tester)
 (libraries genspio base fmt)
 (modules vm_tester))

(executable
 (name service_composer)
 (libraries unix genspio base fmt)
 (modules service_composer))

(executable
 (name multigit)
 (libraries unix genspio base fmt)
 (modules multigit))

(executable
 (name small)
 (libraries genspio base fmt)
 (modules small))

(rule
 (targets small_examples.ml)
 (deps small.exe)
 (action
  (progn
   (run ./small.exe small_examples.ml))))

(executable
 (name small_examples)
 (libraries genspio tests base fmt)
 (modules small_examples))
